# QorQan

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TOKENS.txt  admins.json  config.py  dashboard.py  database.py  handlers.py  keyboards.py  main.py  pyproject.toml  requirements.txt  start.bat  states.py  texts.py
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  SECURITY.md
src/: database.py
src/bot/: handlers.py  keyboards.py  main.py  states.py
src/dashboard/: app.py
src/dashboard/static/: script.js  style.css
src/dashboard/templates/: index.html
static/: style.css
templates/: index.html
tests/: test_database.py
